test/fail/big_heap02.v3
//@execute 0=0; 1=1; 5=755441; 15=7167129; 16=8176640; 49=79376961; 55=99107833; 249=2033208481
var x = init(249, 249);
// TODO: fails because JVM backend cannot split heap init method
def init(r: int, c: int) -> Array<Array<u16>> {
	var count = 1;
	var result = Array<Array<u16>>.new(r);
	for (i < r) {
		var a = Array<u16>.new(c);
		result[i] = a;
		for (j < c) {
			a[j] = u16.view(count);
			count *= 3;
		}
	}
	return result;
}

def main(a: int) -> int {
	var sum = 0;
	for (i < a) {
		for (j < a) {
			sum += x[i][j];
		}
	}
	return sum;
}
